--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,63 @@
 <html>
 <head>
     <style type="text/css">
-    :root {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: no-repeat url("https://assets.codepen.io/5283814/water.jpg");
+@keyframes tipsy {
+  0 {
+    transform: translateX(-50%) translateY(-50%) rotate(0deg);
+  }
+  100% {
+    transform: translateX(-50%) translateY(-50%) rotate(360deg);
+  }
 }
 
-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
-  width: 500px;
-  margin: 0px auto;
-  background-color: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(5px);
-  border-radius: 1rem;
+body {
+  font-family: helvetica, arial, sans-serif;
+  background-color: #2e2e31;
 }
 
-p {
-  font-size: 2rem;
-  font-family: Helvetica;
-  color: #101010;
+a {
+  color: #fffbf1;
+  text-shadow: 0 20px 25px #2e2e31, 0 40px 60px #2e2e31;
+  font-size: 80px;
+  font-weight: bold;
+  text-decoration: none;
+  letter-spacing: -3px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
+a:before,
+a:after {
+  content: '';
+  padding: .9em .4em;
+  position: absolute;
+  left: 50%;
+  width: 100%;
+  top: 50%;
+  display: block;
+  border: 15px solid red;
+  transform: translateX(-50%) translateY(-50%) rotate(0deg);
+  animation: 10s infinite alternate ease-in-out tipsy;
+}
+
+a:before {
+  border-color: #d9524a #d9524a rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+  z-index: -1;
+}
+
+a:after {
+  border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #d9524a #d9524a;
+  box-shadow: 25px 25px 25px rgba(46, 46, 49, .8);
+}
     </style>
 <title>jambot</title>
 </head>
 <body>
   <div>
-  <a href="https://discord.com/api/oauth2/authorize?client_id=802228905380675625&permissions=0&scope=bot">add jambob</a>
+  <a href="https://discord.com/api/oauth2/authorize?client_id=802228905380675625&permissions=0&scope=bot" target="_blank">Add Jambot</a>
   </div>
 </body>
 </html>
