--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@ a:after {
 </head>
 <body>
   <div>
-  <a href="https://discord.com/api/oauth2/authorize?client_id=802228905380675625&permissions=0&scope=bot" target="_blank">Add Jambot</a>
+  <a href="https://discord.com/api/oauth2/authorize?client_id=802228905380675625&permissions=0&scope=bot" target="_blank">Jambot</a>
   </div>
 </body>
 </html>
