--- a/templates/index.html
+++ b/templates/index.html
@@ -52,12 +52,41 @@ a:after {
   border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #d9524a #d9524a;
   box-shadow: 25px 25px 25px rgba(46, 46, 49, .8);
 }
+/* h1::before {  
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+
+h1:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+h1::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  inset: 0 0 0 0;
+  z-index: -1;
+  transition: transform .3s ease;
+}
+
+
+@media (orientation: landscape) {
+  body {
+    grid-auto-flow: column;
+  }
+} */
+
     </style>
 <title>jambot</title>
 </head>
 <body>
   <div>
+  <h1>
   <a href="https://discord.com/api/oauth2/authorize?client_id=802228905380675625&permissions=0&scope=bot" target="_blank">Jambot</a>
+  </h1>
   </div>
 </body>
 </html>
