got rid of the support for custom prefix. The new prefix is now 'ja'.

--- a/templates/index.html
+++ b/templates/index.html
@@ -121,8 +121,9 @@ h1::before {
 </head>
 <body>
   <nav class="navContainer">
-    <div>try .setprefix</div>
-    <h1 onclick="window.open('https://discord.gg/U66qBE9pG3')">Click here to join my server</h>
+    <div>prefix is 'ja'</div>
+    <div>try jahelp</div>
+    <h1 onclick="window.open('https://discord.gg/U66qBE9pG3')">Support Server</h>
     <!-- <div>Nav 2</div>
     <div>Nav 3</div>
     <div>Nav 4</div> -->
